--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
     @* Jquery-confirm *@
     <link href="~/asset/jquery-confirm/css/jquery-confirm.css" rel="stylesheet" />
     <link href="~/css/@(controller).css?v=@DateTime.UtcNow.ToString()" rel="stylesheet" />
+    @* JsTree *@
+    <link href="~/lib/jstree/style.min.css" rel="stylesheet" />
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
@@ -80,6 +82,7 @@
     <script src="~/asset/notifications/js/lobibox.js"></script>
     <script src="~/asset/notifications/js/lobibox.min.js"></script>
     <script src="~/asset/jquery-confirm/js/jquery-confirm.js"></script>
+    <script src="~/lib/jstree/jstree.min.js"></script>
     @* <script src="~/lib/sortablejs/sortable.min.js"></script> *@
 
     <script src="~/lib/adminlte/js/adminlte.min.js"></script>
