--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -68,7 +68,7 @@
                     <a href="/Author" class="nav-link">
                         <i class="nav-icon fas fa-photo-video"></i>
                         <p>
-                            Scene
+                            Cảnh
                         </p>
                     </a>
                 </li>
@@ -77,6 +77,22 @@
                         <i class="nav-icon fas fa-film"></i>
                         <p>
                             Series
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/Series" class="nav-link">
+                        <i class="nav-icon fas fa-search"></i>
+                        <p>
+                            Truyện có thể loại, tình tiết
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/MyCompose" class="nav-link">
+                        <i class="nav-icon fas fa-i-cursor"></i>
+                        <p>
+                            Tự sáng tác
                         </p>
                     </a>
                 </li>
